updated readme with a gif and squished a few bugs relating to the compose button

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -44,6 +44,7 @@ opacity: .5;
 
 #nav-button-container:hover{
   opacity: 1;
+  cursor: pointer;
 }
 
 #nav-button-container h2{
